# octodns-infomaniak

./: .editorconfig  .gitignore  README.md  SECURITY.md  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  cliff.toml  renovate.json5  renovatebot.json5
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/renovate/: labels.json5  semantic_commits.json5
.github/renovatebot/: semantic_commits.json5
.github/workflows/: automation-sync-pr.yml  ci.yml  codeql.yml  dependency-review.yml  lint-pr.yml  lint.yml  lint_pr.yml  release.yml  scorecard.yml  test.yml  zizmor.yml
src/octodns_infomaniak/: __init__.py
tests/: test_provider.py
tests/fixtures/: delete_example2.test.json  empty_example.test.json  get_example.test.json  get_example2.test.json  post_example.test.json  post_example2.test.json
