[project]
name = "octodns-infomaniak"
version = "0.0.0"
description = "Infomaniak provider for octoDNS"
readme = "README.md"
authors = [{ name = "Ludovic Ortega", email = "ludovic.ortega@adminafk.fr" }]
keywords = ["dns", "octodns", "infomaniak"]
license = "CECILL-2.1"
license-files = ["LICENSE*"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Utilities",
]

requires-python = ">=3.10,<4.0.0"
dependencies = ["octodns>=1.10.0,<2.0.0", "requests>=2.32.0"]

[project.urls]
Homepage = "https://github.com/M0NsTeRRR/octodns-infomaniak"
Repository = "https://github.com/M0NsTeRRR/octodns-infomaniak"
Issues = "https://github.com/M0NsTeRRR/octodns-infomaniak/issues"
Funding = "https://ko-fi.com/ludovicortega"

[dependency-groups]
dev = [
  "pytest~=9.0.2",
  "pytest-cov~=7.0.0",
  "responses~=0.26.0",
  "ruff~=0.14.1",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = ["src/octodns_infomaniak"]
